--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                         </tr>
                                    </table>
 
-                                   <p>Ржаной хлеб, Вода, Солод, Соль</p>
+                                   <p>Ржаной хлеб, Вода, Солод, Соль, Перец</p>
 
                                    <div class="img1">
                                         <img src="img/bottle-left.jpg" width="319" height="459"></div>
